fix col-12 bug on mobile, add new illustration thumbnail

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -575,7 +575,7 @@ body {
         margin-bottom: 0;
     }
 
-    .col-8, .col-6, .col-4 {
+    .col-12, .col-8, .col-6, .col-4 {
         float: none;
         width: 100%;
         margin-bottom: $spacing-unit / 4;
